@@ -4,7 +4,7 @@
   </head>
   <body>
     <p id="p_id" name="p_name" class="p_class">Static Elements Page</p>
-    <input id="text_field_id" name="text_field_name" class="text_field_class"
+    <input id="text_field_id" name="text_field_name" class="text_field_class" title="text_field_title"
            size="40" type="text" />
 
     <input id="hidden_field_id" name="hidden_field_name" class="hidden_field_class"
