@@ -24,7 +24,7 @@ Feature: Text Fields
     | tag_name  |
     | index     |
     | text      |
-    #| value     |
+    | title     |
 
   Scenario: Retrieve a text field
     When I retrieve a text field
